Adding DiscoverViewModel and CandidateCell. Hooking up DiscoverView to show real data

--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -179,25 +179,31 @@
                                     <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CandidateCell" id="5p8-O9-cl0">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CandidateCell" id="5p8-O9-cl0" customClass="CandidateCell" customModule="Ketch" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sample-taylor-avatar-square" translatesAutoresizingMaskIntoConstraints="NO" id="OLv-LL-2Yz">
-                                                    <rect key="frame" x="7" y="8" width="167" height="168"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar-square" translatesAutoresizingMaskIntoConstraints="NO" id="OLv-LL-2Yz">
+                                                    <rect key="frame" x="8" y="8" width="164" height="168"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dw0-bM-a99">
-                                                    <rect key="frame" x="38" y="212" width="32" height="30"/>
-                                                    <state key="normal" title="Hide">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCR-cT-9NB">
+                                                    <rect key="frame" x="97" y="212" width="45" height="30"/>
+                                                    <state key="normal" title="Follow">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCR-cT-9NB">
-                                                    <rect key="frame" x="105" y="212" width="45" height="30"/>
-                                                    <state key="normal" title="Follow">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ib-JK-1el">
+                                                    <rect key="frame" x="8" y="182" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dw0-bM-a99">
+                                                    <rect key="frame" x="38" y="212" width="32" height="30"/>
+                                                    <state key="normal" title="Hide">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                 </button>
@@ -205,12 +211,23 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" red="0.8469662070274353" green="0.84711211919784546" blue="0.84695702791213989" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="7Ib-JK-1el" firstAttribute="top" secondItem="OLv-LL-2Yz" secondAttribute="bottom" constant="6" id="7Ny-Xf-6Rs"/>
+                                            <constraint firstItem="OLv-LL-2Yz" firstAttribute="leading" secondItem="5p8-O9-cl0" secondAttribute="leadingMargin" id="93l-54-1ov"/>
+                                            <constraint firstItem="dw0-bM-a99" firstAttribute="leading" secondItem="5p8-O9-cl0" secondAttribute="leadingMargin" constant="30" id="HY9-5p-wHV"/>
+                                            <constraint firstItem="dw0-bM-a99" firstAttribute="bottom" secondItem="5p8-O9-cl0" secondAttribute="bottomMargin" id="QP0-p9-x8A"/>
+                                            <constraint firstItem="7Ib-JK-1el" firstAttribute="leading" secondItem="5p8-O9-cl0" secondAttribute="leadingMargin" id="Qz8-hx-tm0"/>
+                                            <constraint firstItem="OLv-LL-2Yz" firstAttribute="top" secondItem="5p8-O9-cl0" secondAttribute="topMargin" id="RzV-MJ-l7s"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="OLv-LL-2Yz" secondAttribute="trailing" id="XBQ-QX-k3b"/>
+                                            <constraint firstItem="PCR-cT-9NB" firstAttribute="bottom" secondItem="5p8-O9-cl0" secondAttribute="bottomMargin" id="iIV-t1-tbH"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="PCR-cT-9NB" secondAttribute="trailing" constant="30" id="m42-zw-AGo"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="avatarView" destination="OLv-LL-2Yz" id="P4K-c4-PQy"/>
+                                            <outlet property="titleLabel" destination="7Ib-JK-1el" id="iTt-7q-d0l"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="5Q6-Kt-6sh" id="lSL-Ig-bED"/>
-                                    <outlet property="delegate" destination="5Q6-Kt-6sh" id="QRe-LF-BMp"/>
-                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
