Use UserAvatarView for home screen avatars

--- a/Ketch/UserInterface/Home/PostHeaderView.xib
+++ b/Ketch/UserInterface/Home/PostHeaderView.xib
@@ -14,7 +14,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IC8-FW-bK3">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="RhZ-Ly-DAf">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="RhZ-Ly-DAf" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
                             <rect key="frame" x="5" y="5" width="50" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="RhZ-Ly-DAf" secondAttribute="height" multiplier="1:1" id="LSS-PQ-pvW"/>
